...
                        <viewLayoutGuide key="safeArea" id="ujE-Rp-qaA"/>
                    </view>
                    <navigationItem key="navigationItem" id="p8W-eP-el5">
                        <nil key="title"/>
                        <barButtonItem key="leftBarButtonItem" image="settings.png" id="Jw8-JP-CaZ" userLabel="Map Settings">
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityLabel" value="Map settings"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
                                <action selector="showSettings:" destination="WaX-pd-UZQ" id="X2C-Ee-Qvt"/>
                            </connections>
                        </barButtonItem>
                        <button key="titleView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="KsN-ny-Hou">
...
